# arb-contest

./: .gitignore  README.md  arbitrage-arena-rules.md  arbitrage-arena-rules.ru.md  docker-compose.bridge.yml  docker-compose.host.yml  docker-compose.yml
contestants/example-bot/: Cargo.toml  Dockerfile
contestants/example-bot/src/: main.rs  market.rs
scripts/: run.py  run_local.py
simulation/: Cargo.toml  Dockerfile  config.json
simulation/src/: config.rs  cores.rs  main.rs
simulation/src/engine/: contestant.rs  mod.rs  runloop.rs  stats.rs
simulation/src/generation/: config.rs  generate_feed.rs  generate_market.rs  math.rs  mod.rs
simulation/src/net/: http.rs  mod.rs  tcp.rs  udp.rs
simulation/src/protocol/: feed.rs  market.rs  mod.rs  submission.rs
