[package]
name = "simulation"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = "1"
axum = "0.7"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
rand = "0.8"
rand_pcg = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
overflow-checks = false
