[package]
name = "example-bot"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

# Per the contest rules, real contestant submissions must use only their
# language's standard library + libc-equivalent. This example follows that
# constraint so contestants can use it as a starting point.
[dependencies]

[profile.release]
lto = "thin"
codegen-units = 1
